--- a/todolist/to_do_lits.html
+++ b/todolist/to_do_lits.html
@@ -11,9 +11,14 @@
     <div class="todoapp">
       <h2>To-Do_list <img src="images/icon.png" /></h2>
       <div class="row">
-        <input type="text" id="input-box" placeholder="add your text " />
-        <button>Add</button>
+        <input type="text" id="input-box" placeholder="Add  your text" />
+        <button>Add </button>
       </div>
+      <ul id="listconatainer">
+        <!-- <li class="checked">Task 1</li>
+        <li>Task 2</li>
+        <li>Task 3</li> -->
+      </ul>
     </div>
   </body>
   <script src="to_do_list.js"></script>
