--- a/BMI calculater/proj.2.html
+++ b/BMI calculater/proj.2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="BMI.css" />
+    <link rel="stylesheet" href="proj.2.css" />
     <title>BMI Calculator</title>
   </head>
   <body>
@@ -30,5 +30,5 @@
       </form>
     </div>
   </body>
-  <script src="B.js"></script>
+  <script src="proj.2.js"></script>
 </html>
