--- a/Number guessing game/numberguess.html
+++ b/Number guessing game/numberguess.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Number Guessing Game</title>
-    <link rel="stylesheet" href="proj.4.css">
+    <link rel="stylesheet" href="numberguess.css">
 </head>
 <body style="background-color:#212121; color:#fff;">
   <nav>
@@ -32,7 +32,7 @@
             <p class="lowOrHi"></p>
         </div>
     </div>
-    <script src="proj.4.js"></script>
+    <script src="numberguess.js"></script>
 </body>
 </html>
 
